fixed text decoration and grid alignment

--- a/css/style.css
+++ b/css/style.css
@@ -61,14 +61,13 @@ nav a{
 /*Req 2*/
 /*Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
-
 a:hover{
 
   text-decoration: underline;
 }
 
 /*Req 3a*/
-.skip a{
+.skip{
   background: white;
   left: 0;
   padding: 7px;
@@ -103,7 +102,7 @@ top: 10px;
 
   display: grid;
   grid-template-columns: 1fr 3fr 3fr 1fr;
-  grid-auto-rows: auto;
+  grid-auto-rows: auto auto auto auto;
   grid-row-gap: 20px;
 
   /*Your Code Here*/
@@ -134,7 +133,7 @@ header{
 
 /*Req 8a, 8b, and 8c*/
 .about-image, .method-image, .client-image, .contact-image{
-  grid-column: 1 / 4;
+  grid-column: 1 / 5;
   max-height: 650px;
   overflow: hidden;
 
@@ -170,35 +169,38 @@ header{
   border: 10px solid black;
   padding: 30px;
   text-align: center;
+  align-self: center;
 
 }
 
 
 @media all and (min-width: 880px){
-    
+
   img{
      width:100%;
   }
-    
   /*Req 10*/
   nav{
     padding: 30px 0px;
+    text-align: right;
+    
     /*Your code here:*/
   }
 
   /*Req 11*/
   .container{
-    /*Your code here:*/
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-auto-rows: 400px 425px 425px 400px;
   }
 
   /*Req 12*/
   .about, .client, .method-image, .contact-image{
-    /*Your code here:*/
+    grid-column: 3 / 5;
   }
 
   /*Req 13*/
   .about-image, .client-image, .method, .contacts{
-    /*Your code here:*/
+    grid-column: 2 / 4;
   }
 }
 
@@ -214,7 +216,7 @@ preferences to reduce motion.*/
       scroll-behavior: auto; /* Removes scroll animation */
   }
 
-  .skip a{
+  .skip{
     -webkit-transition: none; /* sets to default setting */
     transition: none;        /* sets to default setting */
    }
